[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/Interface/Interface_menu_pause.gd" type="Script" id=1]

[node name="Interface_menu_pause" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Button_continue" type="Button" parent="."]
margin_left = 116.0
margin_top = 25.0
margin_right = 481.0
margin_bottom = 161.0
text = "CONTINUE"

[node name="Button_save" type="Button" parent="."]
margin_left = 71.0
margin_top = 184.0
margin_right = 327.0
margin_bottom = 299.0
text = "SAVE"

[node name="Button_load" type="Button" parent="."]
margin_left = 373.0
margin_top = 189.0
margin_right = 602.0
margin_bottom = 295.0
text = "LOAD"

[node name="Button_option" type="Button" parent="."]
margin_left = 137.0
margin_top = 308.0
margin_right = 432.0
margin_bottom = 441.0
text = "OPTION"

[node name="Button_exit" type="Button" parent="."]
margin_left = 146.0
margin_top = 460.0
margin_right = 428.0
margin_bottom = 574.0
text = "EXIT"

[connection signal="pressed" from="Button_continue" to="." method="_on_Button_continue_pressed"]
[connection signal="pressed" from="Button_save" to="." method="_on_Button_save_pressed"]
[connection signal="pressed" from="Button_load" to="." method="_on_Button_load_pressed"]
[connection signal="pressed" from="Button_option" to="." method="_on_Button_option_pressed"]
[connection signal="pressed" from="Button_exit" to="." method="_on_Button_exit_pressed"]
